--- a/page_analyse_resultats.html
+++ b/page_analyse_resultats.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="page_reference.html">Créer une dictée</a></li>
+            <li><a href="index.html">Créer une dictée</a></li>
             <li><a href="page_saisie.html">Saisir les réponses</a></li>
             <li><a href="page_analyse_resultats.html" class="active">Analyser les résultats</a></li>
         </ul>
